--- a/public/style.scss
+++ b/public/style.scss
@@ -45,6 +45,39 @@ main {
     font-size: 50px;
   }
 }
+.filter-box {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+
+  label {
+    font-size: 24px;
+    margin: 10px;
+    padding: 10px;
+  }
+
+  select {
+    align-self: center;
+    border-radius: 10px;
+    height: 40px;
+    max-width: 40%;
+    margin: 10px;
+    padding-left: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 20px;
+  }
+  button {
+    align-self: center;
+    margin: 10px;
+    padding: 10px;
+    height: 50px;
+    width: 150px;
+    border-radius: 20px;
+    border: none;
+    background-color: #ffffff;
+  }
+}
 
 .recipe {
   display: flex;
@@ -121,30 +154,6 @@ main {
     box-shadow: -1px -1px 21px 3px rgba(218, 218, 218, 0.2);
     height: 32px;
     width: 104px;
-  }
-}
-
-.filter-box {
-  display: flex;
-  justify-content: center;
-  padding: 20px;
-
-  label {
-    font-size: 24px;
-    margin: 10px;
-    padding: 10px;
-  }
-
-  select {
-    align-self: center;
-    border-radius: 10px;
-    height: 40px;
-    max-width: 40%;
-    margin: 10px;
-    padding-left: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-right: 20px;
   }
 }
 
