--- a/public/style.scss
+++ b/public/style.scss
@@ -91,10 +91,12 @@ main {
 }
 
 .add-recipe-box {
+  justify-self: center;
   display: flex;
   flex-direction: column;
   border: solid 1px;
   border-radius: 20px;
+  max-width: 1100px;
   h1 {
     align-self: center;
   }
